# AxiomTrace

./: .gitignore  README.md  pyproject.toml
axiomtrace/: __init__.py  __main__.py  cli.py
axiomtrace/collectors/: __init__.py  base.py
axiomtrace/collectors/specialized/: __init__.py
axiomtrace/collectors/specialized/minecraft/: __init__.py  macro_detector.py  mod_scanner.py  process_inspector.py
axiomtrace/collectors/system/: __init__.py  disk.py  memory.py  prefetch.py  usn_journal.py
axiomtrace/collectors/system/memory/: __init__.py  bfe.py  cdpusersvc.py  explorer.py  search_indexer.py
axiomtrace/core/: __init__.py  engine.py  registry.py
axiomtrace/output/: __init__.py  report.py
axiomtrace/parsers/: __init__.py  base.py
axiomtrace/parsers/specialized/: __init__.py
axiomtrace/parsers/specialized/minecraft/: __init__.py
axiomtrace/parsers/system/: __init__.py
axiomtrace/signatures/: __init__.py  base.py
axiomtrace/signatures/specialized/: __init__.py
axiomtrace/signatures/specialized/minecraft/: __init__.py  minecraft_signatures.py
axiomtrace/signatures/system/: __init__.py  system_signatures.py
axiomtrace/utils/: logging.py  memory.py  process.py  winapi.py
